--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ main,
   left: 50%;
   bottom: 50%;
   transform: translate(-50%, -50%);
-  height: 18.5rem;
+  height: min-content;
   width: 18.5rem;
   max-width: 25rem;
   padding: 12px;
@@ -45,7 +45,7 @@ main,
   justify-content: center;
   align-items: center;
   padding: auto;
-  height: 100%;
+  height: auto;
   width: 100%;
   overflow-y: scroll;
 }
